# snake

./: CMakeLists.txt  compile_commands.json  snake-array.c  snake-linked-list.c
.cache/clangd/index/: snake-array.c.285073F03E38E1C9.idx  snake-linked-list.c.B8DD30F0C68923FF.idx
